--- a/video game recommendation with explicit rating/Video game recommendation with explicit data.ipynb
+++ b/video game recommendation with explicit rating/Video game recommendation with explicit data.ipynb
@@ -754,6 +754,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "08b32d2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deleteVaraible ='\\id'\n",
+    "for j in range(0, len(columns)):\n",
+    "    if(columns[j].str.contains(deleteVaraible))\n",
+    "    df = df.drop([column[j]], axis=1)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "67e3857c",
    "metadata": {},
@@ -2440,7 +2454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
