--- a/video game recommendation with explicit rating/Video game recommendation with explicit data.ipynb
+++ b/video game recommendation with explicit rating/Video game recommendation with explicit data.ipynb
@@ -9958,10 +9958,10 @@
     }
    ],
    "source": [
-    "# train\n",
-    "training = model.fit(x=[train[\"user_id\"], train[\"game_id\"]], y=train[\"y\"], epochs=100, batch_size=128, shuffle=True, verbose=0, validation_split=0.3)\n",
-    "model = training.model\n",
-    "#utils_plot_keras_training(training)"
+    "# # train\n",
+    "# training = model.fit(x=[train[\"user_id\"], train[\"game_id\"]], y=train[\"y\"], epochs=100, batch_size=128, shuffle=True, verbose=0, validation_split=0.3)\n",
+    "# model = training.model\n",
+    "# #utils_plot_keras_training(training)"
    ]
   },
   {
